# lite3_gazebo_classic2

./: .gitignore  .gitmodules  README.md  README_CN.md  install_sensor_deps.sh  run_gazebo.sh
commands/: README.md
commands/cmd_vel_bridge/: CMakeLists.txt  package.xml
commands/cmd_vel_bridge/launch/: cmd_vel_bridge.launch.py
commands/cmd_vel_bridge/src/: CmdVelBridge.cpp
commands/joystick_input/: CMakeLists.txt  README.md  package.xml
commands/joystick_input/include/joystick_input/: JoystickInput.h
commands/joystick_input/src/: JoystickInput.cpp
commands/keyboard_input/: CMakeLists.txt  README.md  package.xml
commands/keyboard_input/include/keyboard_input/: KeyboardInput.h
commands/keyboard_input/launch/: keyboard.launch.py
commands/keyboard_input/src/: KeyboardInput.cpp
commands/unitree_joystick_input/: CMakeLists.txt  README.md  package.xml
commands/unitree_joystick_input/include/unitree_joystick_input/: JoystickInput.h
commands/unitree_joystick_input/src/: JoystickInput.cpp
controllers/unitree_guide_controller/: CMakeLists.txt  package.xml
controllers/unitree_guide_controller/include/unitree_guide_controller/: UnitreeGuideController.h
controllers/unitree_guide_controller/src/: UnitreeGuideController.cpp
controllers/unitree_guide_controller/src/FSM/: StateBalanceTest.cpp  StateFixedStand.cpp  StateFreeStand.cpp  StateSwingTest.cpp  StateTrotting.cpp
controllers/unitree_guide_controller/src/control/: BalanceCtrl.cpp  Estimator.cpp
controllers/unitree_guide_controller/src/robot/: KinematicsHelper.cpp  QuadrupedRobot.cpp
docs/: README.md  control_interface_spec.md  fastlivo2_rcl_analysis.md  gazebo_livox_integration.md  keyboard_control_guide.md  realsense_configuration_summary.md  sensor_configuration.md  troubleshooting.md
libraries/controller_common/: CMakeLists.txt  package.xml
libraries/controller_common/include/controller_common/: CtrlInterfaces.h
libraries/controller_common/src/FSM/: BaseFixedStand.cpp  StateFixedDown.cpp  StatePassive.cpp
libraries/gz_quadruped_playground/launch/slam/: fastlivo2_remap.launch.py
lite3_description/: README.md
lite3_description/launch/: gazebo.launch.py  gazebo_classic.launch.py  gazebo_server_only.launch.py  visualize.launch.py
lite3_description/urdf/: robot.urdf
lite3_description/xacro/: const.xacro  leg.xacro  robot.xacro  transmission.xacro
lite3_description/xacro/sensors/: d435i_sensor.xacro  load_sensors.xacro  mid360_sensor.xacro
src/lite3_gazebo_classic/lite3_description/config/: gazebo.yaml
src/lite3_gazebo_classic/tools/: calculate_foot_positions.py
tools/: UPDATE_SUMMARY.md  calculate_inertia.py
